--- a/pdf-converter/app/templates/index.html
+++ b/pdf-converter/app/templates/index.html
@@ -14,12 +14,11 @@
 
 <h2>Check our <a href="https://github.com/LukeIngram/img-to-pdf-converter-webapp">Github</a> for Progress Updates </h2>
 
-<form action="upload.php" method="post" enctype="multipart/form-data">
+<form  method="post" action="" enctype="multipart/form-data">
 	  Select image to upload:
-		<input type="file" name="fileToUpload" id="fileToUpload">
-		<input type="submit" value="Upload Image" name="submit">
+		<input type="file" name="file">
+		<input type="submit" value="Submit">
 </form>
-
 <hr width="100%">
 <font size="-1">Last updated Mar. '22</font>
 
