--- a/templates/index.html
+++ b/templates/index.html
@@ -16,9 +16,15 @@
 
 <form  method="post" action="" enctype="multipart/form-data">
 	  Select image to upload:
-		<input type="file" name="file">
+		<input type="file" name="file" required>
 		<input type="submit" value="Submit">
 </form>
+
+{% if filename %}
+	<div>
+		<img src="{{ url_for('display', filename=filename) }}">
+	</div>
+{% endif %}
 <hr width="100%">
 <font size="-1">Last updated Mar. '22</font>
 
