--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -31,12 +31,12 @@
 		<input type="file" name="file" required>
 		<input type="submit" value="Submit">
 </form>
+<p>
 
-{% if filename %}
 	<div>
-		<img src="{{ url_for('display', filename=filename) }}">
+		<img src="{{ url_for('display',filename=) }}">
 	</div>
-{% endif %}
+</p>
 <hr width="100%">
 <font size="-1">Last updated Mar. '22</font>
 
