--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -34,11 +34,11 @@
 <p>
 
 	<div>
-		<img src="{{ url_for('display',filename=) }}">
+		<img src="{{ url_for('display',filename=file) }}">
 	</div>
 </p>
 <hr width="100%">
-<font size="-1">Last updated Mar. '22</font>
+<font size="-1">Last updated Apr. '22</font>
 
 </body>
 </html>
