--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,7 +19,7 @@
 				<p>This is placeholder text for the instructions.</p>
 			</div>
 			<div class="main__imageOutput">
-				<img src="{{ url_for('static', filename='placeholder.jpg') }}" />
+				<img width="750" height="400" src="{{ url_for('static', filename='placeholder.jpg') }}" />
 			</div>
 			<div class="main__buttonRow">
 				<p style="color: blue">
@@ -32,24 +32,22 @@
 					</ul>
 					{% endif %}
 				 {% endwith %} 
-				</p>
+				</p>	
 				
-				
-				
-				{% if file %}
-					<div>
-						<img src="{{ url_for('display_image', filename=file) }}">
-					</div>
-				{% endif %}
 				<hr width="100%">
 				<p>Last updated May. 2022</p>
-				<div class="main__uploadButton"></div>
+				<div class="main__uploadButton"></div> <!--TODO add second button and js go handle visibility-->
 					<form  method="post" action="" enctype="multipart/form-data">
 					Select image to upload:
 					  <input type="file" name="file" required>
 					  <input type="submit" value="Submit">
 			  		</form>
 				<div class="main__submitButton"></div>
+				{% if file %}
+					<div>
+						<img src="{{ url_for('display_image', filename=file) }}">
+					</div>
+				{% endif %}
 			</div>
 		</main> 
 		<footer>
