--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,6 +7,14 @@
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/normalize') }}">
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/stylesheet.css') }}">
   <title>Oops!</title>
+  <style>
+	.responsive-iframe {
+		width: 100%; /* Full width */
+		height: 80vh; /* Adjusted to not occupy the full viewport height */
+		border: none; /* Optional: removes the default iframe border */
+	}
+  </style>	
+
 </head>
 <body>
 	<div class="fullBox">
@@ -17,9 +25,6 @@
 		<main>
 			<div class="main__instructions">
 				<p>This is placeholder text for the instructions.</p>
-			</div>
-			<div class="main__imageOutput">
-				<img width="750" height="400" src="{{ url_for('static', filename='placeholder.jpg') }}" />
 			</div>
 			<div class="main__buttonRow">
 				<p style="color: blue">
@@ -35,18 +40,38 @@
 				</p>	
 				
 				<hr width="100%">
-				<p>Last updated May. 2022</p>
-				<div class="main__uploadButton"></div> <!--TODO add second button and js go handle visibility-->
+				<p>Last updated November, 2023</p>
+				<div class="main__uploadButton"></div> 
 					<form  method="post" action="" enctype="multipart/form-data">
 					Select image to upload:
 					  <input type="file" name="file" required>
-					  <input type="submit" value="Submit">
+					  <label> Verbose
+					  <input type="checkbox" name="verbose" value="No">  
+					  </label>
+					  <label> pdf
+						<input type="checkbox" name="pdf" value="No">
+					  </label>
+					  <input type="submit" value="Upload">
 			  		</form>
 				<div class="main__submitButton"></div>
-				{% if file %}
-					<div>
-						<img src="{{ url_for('display_image', filename=file) }}">
-					</div>
+				{% if report_url %}
+					<h2>Report Image</h2>
+					<img src="{{ report_url }}" alt="Report Image">
+				{% endif %}
+
+				{% if output_url %}
+					
+					<h2>Processed Input</h2>
+					{% if content_type == 'image' %}
+						<img src="{{ output_url }}" alt="Output Image" style="max-width: 100%; max-height: 100vh; height: auto; width: auto;"><br>
+					{% elif content_type == 'pdf' %}
+						<iframe src="{{ output_url }}" class="responsive-iframe">
+							If your browser does not support pdfs, please download to view.
+						</iframe>
+					{% endif %}
+					<a href="{{ output_url }}" download>
+						<button>Download</button>
+					</a>
 				{% endif %}
 			</div>
 		</main> 
