--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,88 +1,78 @@
-<!DOCTYPE html >
+<!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
-	<meta http-equiv="content-language" content="en-us">
-	<meta name="author" content="not me">
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/normalize') }}">
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/stylesheet.css') }}">
-  <title>Oops!</title>
-  <style>
-	.responsive-iframe {
-		width: 100%; /* Full width */
-		height: 80vh; /* Adjusted to not occupy the full viewport height */
-		border: none; /* Optional: removes the default iframe border */
-	}
-  </style>	
-
-</head>
+    <meta charset="iso-8859-1">
+    <meta http-equiv="content-language" content="en-us">
+    <meta name="author" content="Luke Ingram">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/normalize.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/stylesheet.css') }}">
+    <title>DocuScanner</title>
+    <style>
+        .responsive-iframe {
+            width: 100%;
+            height: 80vh;
+            border: none;
+        }
+    </style>
 <body>
-	<div class="fullBox">
-		<header>
-			<h1>This Page is Currently Under Development.</h1>
-			<h2>Check the <a href="https://github.com/LukeIngram/img-to-pdf-converter-webapp">Github</a> for Progress Updates </h2>
-		</header> 
-		<main>
-			<div class="main__instructions">
-				<p>This is placeholder text for the instructions.</p>
-			</div>
-			<div class="main__buttonRow">
-				<p style="color: blue">
-					{% with messages = get_flashed_messages() %}
-					{% if messages %}
-					<ul style="list-style:none;">
-					   {% for message in messages %}
-						<li>{{ message }}</li>
-					   {% endfor %}
-					</ul>
-					{% endif %}
-				 {% endwith %} 
-				</p>	
-				
-				<hr width="100%">
-				<p>Last updated November, 2023</p>
+    <div class="fullBox">
+        <header>
+            <h1>DocuScanner-Flask</h1>
+            <h2>Check the <a href="https://github.com/LukeIngram/DocuScanner-Flask">Github</a> for Progress Updates</h2>
+        </header>
+        <main>
+            <section class="main__instructions">
+                <p>Upload an image of your document below! Supported types are jpeg, png, & tiff. Please make sure the entire document is visible .</p>
+                <img src="static/report_fingers.jpg" alt="sample input/output" style="max-width: 100%; height: auto;">
+            </section>
+            <section class="main__buttonRow">
+                {% with messages = get_flashed_messages() %}
+                    {% if messages %}
+                        <ul class="messages" style="list-style:none; color: blue;">
+                            {% for message in messages %}
+                                <li>{{ message }}</li>
+                            {% endfor %}
+                        </ul>
+                    {% endif %}
+                {% endwith %}
 
-				<div class="main__uploadButton"></div> 
-					<form  method="post" action="" enctype="multipart/form-data">
-					Select image to upload:
-					  <input type="file" name="file" required>
-					  <label> Verbose
-					  <input type="checkbox" name="verbose" value="No">  
-					  </label>
-					  <label> pdf
-						<input type="checkbox" name="pdf" value="No">
-					  </label>
-					  <input type="submit" value="Upload">
-			  		</form>
+                <hr>
 
-				<div class="main__submitButton"></div>
-				{% if report_url %}
-					<h2>Report Image</h2>
-					<img src="{{ report_url }}" alt="Report Image">
-				{% endif %}
+                <form method="post" action="" enctype="multipart/form-data">
+                    <p>Select image to upload:</p>
+                    <input type="file" name="file" required>
+                    <div>
+                        <label> Verbose
+                            <input type="checkbox" name="verbose" value="No">
+                        </label>
+                        <label> PDF
+                            <input type="checkbox" name="pdf" value="No">
+                        </label>
+                    </div>
+                    <input type="submit" value="Upload">
+                </form>
 
-				{% if output_url %}
-					
-					<h2>Processed Input</h2>
-					{% if content_type == 'image' %}
-						<img src="{{ output_url }}" alt="Output Image" style="max-width: 100%; max-height: 100vh; height: auto; width: auto;"><br>
+                {% if report_url %}
+                    <h2>Report Image</h2>
+                    <img src="{{ report_url }}" alt="Report Image">
+                {% endif %}
 
-					{% elif content_type == 'pdf' %}
-						<object data="{{ output_url }}" type="pdf" class="responsive-iframe">
-							<p><a href="{{ output_url }}"> View PDF</a></p>
-						</object>
-					{% endif %}
-
-					<a href="{{ output_url }}" download>
-						<button>Download</button>
-					</a>
-				{% endif %}
-			</div>
-		</main> 
-		<footer>
-		ADD COPYRIGHT HERE
-		</footer> 
-	</div>
-
+                {% if output_url %}
+                    <h2>Processed Input</h2>
+                    {% if content_type == 'image' %}
+                        <img src="{{ output_url }}" alt="Output Image" style="max-width: 100%; height: auto;">
+                    {% elif content_type == 'pdf' %}
+                        <object data="{{ output_url }}" type="application/pdf" class="responsive-iframe"></object>
+                    {% endif %}
+                    <a href="{{ output_url }}" download>
+                        <button>Download</button>
+                    </a>
+                {% endif %}
+            </section>
+        </main>
+        <footer>
+            <p>Last updated November, 2023</p>
+        </footer>
+    </div>
 </body>
 </html>
