--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -72,7 +72,7 @@
             </section>
         </main>
         <footer>
-            <p>&copy; 2023 Your Company Name</p>
+            <p>&copy; 2023 Luke Ingram</p>
             <p>Last updated November, 2023</p>
         </footer>
     </div>
